css/default.css
:root {
    color-scheme: dark light;
    --background-color: light-dark(#ffffff, #000000);
    --violet: #8000ff;
    --zara: #ff8000;
    --cato: #00ff00;
    --tron: #53B8FF;
    --boy-blue: #21cae0;
    --girl-pink: #f4c2c2;
    --enby-green: #3cff6d;
    --old-brown: #a07000;
}

body {
    font-family: "Lexend Deca", sans-serif;
    background-color: var(--background-color);
    margin-left: 15vw;
    margin-right: 15vw;
}

h1 {
    font-size: 5rem;
    text-align: center;
    margin-top: 1rem;
    margin-bottom: 0rem;
}

h2 {
    font-size: 2.5rem;
    text-align: center;
}

h3 {
    font-size: 2rem;
    text-decoration: underline;
}

h4 {
    font-size: 1.5rem;
    font-style: italic;
}

a {
    color: var(--tron);
    text-decoration: underline;
}

.violet {
    color: var(--violet);
}

.zara {
    color: var(--zara);
}

.cato {
    color: var(--cato);
}

.tron {
    font-family: "Orbitron", sans-serif;
    color: var(--tron);
}

.boy-blue {
    color: var(--boy-blue);
}

.girl-pink {
    color: var(--girl-pink);
}

.enby-green {
    color: var(--enby-green);
}

.old-brown {
    color: var(--old-brown);
}

.program {
    font-family: "Orbitron", sans-serif;
}

.mono {
    font-family: "Cutive Mono", monospace;
}

.roman {
    font-family: "EB Garamond", serif;
}

.sleek {
    font-family: "Lexend Deca", sans-serif;
}

.first {
    /* .violet && .program */
    color: var(--violet);
    font-family: "Orbitron", sans-serif;

    /* sizing fixes */
    font-size: 4.45rem;
}

.middle {
    /* .zara && .mono */
    color: var(--zara);
    font-family: "Cutive Mono", monospace;

    /* sizing fixes */
    font-size: 5.75rem;
}

.last {
    /* .cato && .roman */
    color: var(--cato);
    font-family: "EB Garamond", serif;

    /* sizing fixes */
    font-size: 5rem;
}

